Bug 512239 - The context menu on the “ Associations” page of the “Class Properties” dialog box is not displayed
Summary: The context menu on the “ Associations” page of the “Class Properties” dialog...
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.11.80
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-11-17 13:21 UTC by Ralf Habacker
Modified: 2025-11-17 13:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.11.90
Sentry Crash Report:


Attachments
test file (10.43 KB, text/x-xmi)
2025-11-17 13:21 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2025-11-17 13:21:56 UTC
Created attachment 186883 [details]
test file

STEPS TO REPRODUCE
1. download binary snapshot for umbrello
2. start umbrello  and load appended test file
3. Double click on the class "new_class"
4. Click button "Associations" 
5. Move mouse over present entry and press right mouse click

OBSERVED RESULT
Nothing happens, the context menu is not opened

EXPECTED RESULT
The context menu should be opened.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Leap 15.6
KDE Plasma Version: 5.27.11
KDE Frameworks Version: 5.115.0
Qt Version: 5.15.12
Comment 1 Ralf Habacker 2025-11-17 13:23:29 UTC
Git commit 7f0c84e5b996dfb90d0f7eff3c89ffe5e17e12ce by Ralf Habacker.
Committed on 17/11/2025 at 13:23.
Pushed by habacker into branch 'master'.

Fix bug not showing the context menu in class associations page

In the constructor of class DialogsPopupMenu the required switch
case 'tt_Association_Selected' was not present.
FIXED-IN:25.11.90

M  +5    -0    umbrello/menus/dialogspopupmenu.cpp

https://invent.kde.org/sdk/umbrello/-/commit/7f0c84e5b996dfb90d0f7eff3c89ffe5e17e12ce
Comment 2 Ralf Habacker 2025-11-17 13:24:40 UTC
Git commit de682f6d012a43b49a519bd625be3dbc8b947138 by Ralf Habacker.
Committed on 17/11/2025 at 13:24.
Pushed by habacker into branch 'release/25.12'.

Fix bug not showing the context menu in class associations page

In the constructor of class DialogsPopupMenu the required switch
case 'tt_Association_Selected' was not present.
FIXED-IN:25.11.90
(cherry picked from commit 7f0c84e5b996dfb90d0f7eff3c89ffe5e17e12ce)

M  +5    -0    umbrello/menus/dialogspopupmenu.cpp

https://invent.kde.org/sdk/umbrello/-/commit/de682f6d012a43b49a519bd625be3dbc8b947138