Fix bug not showing the context menu in class associations page

In the constructor of class DialogsPopupMenu the required switch
case 'tt_Association_Selected' was not present.

BUG:512239
FIXED-IN:25.11.90